2.0: 12/29/2020
	* Render the log-stream name with the Ec2PatternLayout to support %date and other patterns.
	* Added %uuid, %hostName, %hostAddress, %systemProperty, and %systemEnviron layout patterns.
	* Added support for the handling of event messages larger than 256k.  Thanks to @fs-aikito and @alexvanacker. 
	* Fleshed out the unit tests.

1.11: 1/20/2018
	* Added instance-name and instance-id expansion into the log-stream name.   Thanks much to Johannes Röckert.
	* Refined dependency documentation to just logs and ec2. Thanks to @RedXi and @m1schka.

1.10: 5/10/2017
	* Got rid of Long.compare(...).  Not in Java 6.

1.9: 5/10/2017
	* Create the Cloudwatch log-group and log-stream using reflection to hack around the AWS SDK incompatibility.

1.8: 5/4/2017
	* Added sorting of events before posting to CloudWatch because otherwise an exception is thrown by AWS.

1.7: 4/11/2017
	* Fixed problem with the DefaultAWSCredentialsProviderChain properties.  Thanks to alexfoxgill.

1.6: 4/7/2017
	* Fix to the EC2 instance name lookup to add in the region.  Thanks to alexfoxgill.

1.5: 4/6/2017
	* Added support for cloudwatchappender.aws.accessKeyId cloudwatchappender.aws.secretKey properties.
	* Better handling of sequence token with a retry.
	* Added better unit tests and fixed a couple of wiring issues. 

1.4: 4/6/2017
	* Added initialWaitTimeMillis to not log initially when application starts up.
	* Better handling of sequence token with a retry.

1.3: 4/5/2017
	* Fixed the thread name in the output.  Sigh.

1.2: 4/5/2017
	* Better handling of initialization errors and other internal log messages.

1.1: 4/3/2017
	* Added support for the DefaultAWSCredentialsProviderChain.  Thanks to efenderbosch.

1.0: 3/21/2017
	* Removed extraneous exception handling since the layout does it for us.
	* Fixed some of the emergency appender stop/stop logic.

0.4: 3/15/2017
	* Moved the initialization of the AWS log client to later to stop log recursion.

0.3: 3/14/2017